# OfflineAIStudio

./: .gitignore  CMakeLists.txt  OfflineAIStudio.pro  README.md
doc/: OfflineAIStudio_技术设计文档.docx  architecture.md  generate_docx.py  技术设计文档.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/agents/: codeagent.cpp  codeagent.h  computeragent.cpp  computeragent.h  fileagent.cpp  fileagent.h  searchagent.cpp  searchagent.h  textagent.cpp  textagent.h
src/core/: agent.cpp  agent.h  conversationmanager.cpp  conversationmanager.h  environmentdetector.cpp  environmentdetector.h  llmclient.cpp  llmclient.h  orchestrator.cpp  orchestrator.h  planner.cpp  planner.h  promptbuilder.cpp  promptbuilder.h  securitymanager.cpp  securitymanager.h  task.h  taskscheduler.cpp  taskscheduler.h  tool.cpp  tool.h
src/ui/: agentselector.cpp  agentselector.h  chatpage.cpp  chatpage.h  chatwidget.cpp  chatwidget.h  iconhelper.cpp  iconhelper.h  modelconfigpage.cpp  modelconfigpage.h  outputpanel.cpp  outputpanel.h  settingspanel.cpp  settingspanel.h  skillimportpage.cpp  skillimportpage.h  tasklistpanel.cpp  tasklistpanel.h  thememanager.cpp  thememanager.h
